# Projects

./: .gitignore  LICENSE  README.md
Decision Trees on Infinite Grid/: README.md  trees.py
Octree/: CMakeLists.txt  build
Octree/cmake/Modules/: FindCppTest.cmake
Octree/src/: CMakeLists.txt  collisions.cpp  collisions.h  collisions_unit.h  octree.cpp  octree.h  octree_unit.h  types_3d.cpp  types_3d.h  types_3d_unit.h  unit_tests.cpp
Sallen Key Solver/: README.md  SallenKey_Design.py  misc.py
Short Time Fourier Transform/: BuildQtGui.py  ParseMathExp.py  README.md  Stft.py  mplcanvas.py  sfft_gui.py  sfft_gui.ui
Short Time Fourier Transform/archive/: half_cosine.py  stft.py
Short Time Fourier Transform/media/: .gitignore
Weinberg Circuit/: README.md  v02-Ideal.asc  v03-NonIdeal.asc  v_4-SEPIC.asc
